# rust-ml

./: Cargo.toml  readme.md  requirements.txt
data/: final_train.csv
scripts/: preprocessing.py
src/: decision_tree.rs  machine_learning.rs  main.rs  utils.rs
