[package]
name = "ml-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1"
itertools = "0.10.5"
polars = { version = "0.29.0", features = ["to_dummies"] }
rand="0.8.5"
